# go-shorten

./: .gazelcfg.json  .gitignore  .travis.yml  BUILD  BUILD.bazel  Dockerfile  Gopkg.toml  README.md  WORKSPACE  env_options.go  env_options_test.go  go.mod  go.sum  main.go  options.go  release.sh
.github/workflows/: ci.yaml
flyway/: flyway.conf
flyway/sql/: V1.0__base.sql  V2.0__search.sql  V2.1__usage.sql  V3.0__usage.sql
handlers/: BUILD  BUILD.bazel  api.go  go-dashboard.go  handlers.go  index.go  metrics.go  search.go  shortInfo.go  static.go  top_n.go  utils.go
handlers/templates/: BUILD  index.go  templates.go
static/: index.html
static/css/: shorten.css
static/js/: app.js  go.js  search.js
static/templates/: existing.tmpl  go-dashboard.tmpl  go.tmpl  index.tmpl  search.tmpl
storage/: BUILD  BUILD.bazel  filesystem.go  filesystem_test.go  inmem.go  inmem_test.go  multistorage.go  postgres.go  postgres_test.go  regex.go  regex_test.go  replacer_test.go  s3.go  s3_test.go  storage.go  storage_internal_test.go  storage_test.go
storage/migrations/: BUILD  BUILD.bazel  S3v2.go  S3v3.go
storage/multistorage/: BUILD  BUILD.bazel  loader.go  loader_internal_test.go  multistorage.go  multistorage_option.go  multistorage_test.go  saver.go  saver_internal_test.go
