load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "index.go",
        "metrics.go",
    ],
    importpath = "github.com/thomaso-mirodin/go-shorten/handlers",
    visibility = ["//visibility:public"],
    deps = [
        "//storage:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus/promhttp:go_default_library",
    ],
)
