load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "filesystem.go",
        "inmem.go",
        "postgres.go",
        "regex.go",
        "s3.go",
        "storage.go",
        "utils.go",
    ],
    importpath = "github.com/thomaso-mirodin/go-shorten/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/awserr:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3:go_default_library",
        "//vendor/github.com/jmoiron/sqlx:go_default_library",
        "//vendor/github.com/lib/pq:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "regex_test.go",
        "replacer_test.go",
        "storage_internal_test.go",
    ],
    importpath = "github.com/thomaso-mirodin/go-shorten/storage",
    library = ":go_default_library",
    deps = [
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = [
        "filesystem_test.go",
        "inmem_test.go",
        "postgres_test.go",
        "s3_test.go",
        "storage_test.go",
    ],
    importpath = "github.com/thomaso-mirodin/go-shorten/storage_test",
    deps = [
        ":go_default_library",
        "//storage/migrations:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3:go_default_library",
        "//vendor/github.com/jmoiron/sqlx:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)
