load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "loader.go",
        "multistorage.go",
        "multistorage_option.go",
        "saver.go",
    ],
    importpath = "github.com/thomaso-mirodin/go-shorten/storage/multistorage",
    visibility = ["//visibility:public"],
    deps = [
        "//storage:go_default_library",
        "//vendor/github.com/hashicorp/go-multierror:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "loader_internal_test.go",
        "saver_internal_test.go",
    ],
    importpath = "github.com/thomaso-mirodin/go-shorten/storage/multistorage",
    library = ":go_default_library",
    deps = [
        "//storage:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = ["multistorage_test.go"],
    importpath = "github.com/thomaso-mirodin/go-shorten/storage/multistorage_test",
    deps = [
        ":go_default_library",
        "//storage:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)
